// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hashTag HashTag in sentence with spaces 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "This is a",
        "text": "This is a",
        "type": "plain",
      },
      {
        "raw": " ",
        "text": " ",
        "type": "plain",
      },
      {
        "href": "tag",
        "raw": "#tag",
        "type": "hashTag",
      },
      {
        "raw": " .",
        "text": " .",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag HashTag in sentence without spaces is not hashTag 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "→#notTag←",
        "text": "→#notTag←",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag HashTag includes \`#\` 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "href": "hash#Tag",
        "raw": "#hash#Tag",
        "type": "hashTag",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag Multiple hashTag 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "href": "hoge",
        "raw": "#hoge",
        "type": "hashTag",
      },
      {
        "raw": " ",
        "text": " ",
        "type": "plain",
      },
      {
        "href": "fuga",
        "raw": "#fuga",
        "type": "hashTag",
      },
      {
        "raw": " ",
        "text": " ",
        "type": "plain",
      },
      {
        "href": "piyo",
        "raw": "#piyo",
        "type": "hashTag",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag Only \`#\` is not hashTag 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "#",
        "text": "#",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag Simple hashTag 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "href": "tag",
        "raw": "#tag",
        "type": "hashTag",
      },
    ],
    "type": "line",
  },
]
`;
